# spikes

./: .gitignore  LICENSE
01CMake/: CMakeLists.txt  CMakeSettings.json
01CMake/01CMake/: 01CMake.cpp  01CMake.h  CMakeLists.txt
02CMakeMultiplatform/: .gitignore
02CMakeMultiplatform/src/: CMakeLists.txt  cmakeGccLinuxX64.sh  cmakeMsvcWinX64.bat  comandi.txt  shared.h  shared_exports.h
Del02/src/: comandi.txt  main.cpp  shared.cpp
del1/: CMakeLists.txt
del1/del1/: CMakeLists.txt  del1.cpp  del1.h
